add builder manager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,8 @@ if(WIN32)
     add_definitions(-DWIN32)
     SET(PROJECT_LIBS Ws2_32.lib)
 endif()
-
 file(GLOB HEADERS "*.hpp" "model/*.hpp")
 SET_SOURCE_FILES_PROPERTIES(${HEADERS} PROPERTIES HEADER_FILE_ONLY TRUE)
 file(GLOB SRC "*.cpp" "model/*.cpp")
-add_executable(aicup2020 ${HEADERS} ${SRC} EntityManager.hpp EntityGroups.hpp EntityGroups.cpp)
+add_executable(aicup2020 ${HEADERS} ${SRC} )
 TARGET_LINK_LIBRARIES(aicup2020 ${PROJECT_LIBS})
