fix deadlock builder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,8 @@ if(WIN32)
     SET(PROJECT_LIBS Ws2_32.lib)
 endif()
 
-file(GLOB HEADERS "*.hpp" "model/*.hpp")
+file(GLOB HEADERS "*.hpp" "model/*.hpp" "manager/Manager.hpp" "manager/attacker/*.hpp" "manager/builder/*hpp")
 SET_SOURCE_FILES_PROPERTIES(${HEADERS} PROPERTIES HEADER_FILE_ONLY TRUE)
-file(GLOB SRC "*.cpp" "model/*.cpp")
+file(GLOB SRC "*.cpp" "model/*.cpp" "manager/attacker/*.cpp" "manager/builder/*cpp")
 add_executable(aicup2020 ${HEADERS} ${SRC})
 TARGET_LINK_LIBRARIES(aicup2020 ${PROJECT_LIBS})
